--- a/Web.config
+++ b/Web.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0"?>
 <!--
-  For more information on how to configure your ASP.NET application, please visit
+  For more information on how to configure your ASP.NET application, please visit ore
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
   <connectionStrings>    
+    <add name="AUSACnnProd" connectionString="Data Source=192.168.0.239/sol3;Initial Catalog=dbausa;User ID=pymovil_user;Password=pymovil.user.%H" providerName="System.Data.SqlClient"/>
     <add name="AUSACnn" connectionString="Data Source=192.168.0.21;Initial Catalog=DBAUSA_PYMOVIL;User ID=pymovil_user;Password=pymovil.user.%H" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
