--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,8 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-  <connectionStrings>
+  <connectionStrings>    
+    <!--<add name="AUSACnnProd" connectionString="Data Source=192.168.0.239/sol3;Initial Catalog=dbausa;User ID=pymovil_user;Password=pymovil.user.%H" providerName="System.Data.SqlClient"/>-->
     <add name="AUSACnn" connectionString="Data Source=192.168.0.21;Initial Catalog=DBAUSA_PYMOVIL;User ID=pymovil_user;Password=pymovil.user.%H" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
